// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClearRefinements has a disabled mode 1`] = `
<div
  className="cvi-ClearRefinements"
>
  <button
    className="cvi-ClearRefinements-button cvi-ClearRefinements-button--disabled"
    disabled={true}
    onClick={[Function]}
  >
    Clear all filters
  </button>
</div>
`;

exports[`ClearRefinements renders a clickable button 1`] = `
<div
  className="cvi-ClearRefinements"
>
  <button
    className="cvi-ClearRefinements-button"
    disabled={false}
    onClick={[Function]}
  >
    Clear all filters
  </button>
</div>
`;

exports[`ClearRefinements renders a clickable button with a custom className 1`] = `
<div
  className="cvi-ClearRefinements MyCustomClearRefinements"
>
  <button
    className="cvi-ClearRefinements-button"
    disabled={false}
    onClick={[Function]}
  >
    Clear all filters
  </button>
</div>
`;
